Add Payara runtime. FIX: Scenario loading JSON file for cross-platform.